--- a/Clases/Class1.ipynb
+++ b/Clases/Class1.ipynb
@@ -1,6 +1,32 @@
 {
  "cells": [
   {
+   "cell_type": "raw",
+   "id": "8326852c",
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
+   "source": [
+    "---\n",
+    "tittle: \"Informe 1\"\n",
+    "author: \"Ismael Freire\"\n",
+    "lang: es\n",
+    "format:\n",
+    "  pdf:\n",
+    "    toc: true\n",
+    "    toc-title: \"Tabla de contenidos\"\n",
+    "execute:\n",
+    "   echo: true\n",
+    "   error: false\n",
+    "   warning: false\n",
+    "jupyter: python3\n",
+    "link-citations: true\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "6b8513de",
    "metadata": {},
@@ -82,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "id": "cda55460",
    "metadata": {},
    "outputs": [
@@ -129,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "id": "d01095a1",
    "metadata": {},
    "outputs": [
@@ -165,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "id": "bfba1bf0",
    "metadata": {},
    "outputs": [
@@ -178,6 +204,8 @@
     }
    ],
    "source": [
+    "import sys\n",
+    "\n",
     "# Ejemplo del desbordamiento de entero\n",
     "try:\n",
     "    large_int = sys.maxsize ** 1000\n",
@@ -214,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "id": "6b28d16f",
    "metadata": {},
    "outputs": [
@@ -254,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "id": "82a4a8ca",
    "metadata": {},
    "outputs": [
@@ -288,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "id": "9fc85c66",
    "metadata": {},
    "outputs": [
@@ -321,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "5c623287",
    "metadata": {},
    "outputs": [
