--- a/Clases/Class2.ipynb
+++ b/Clases/Class2.ipynb
@@ -2,10 +2,40 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "a17d6498",
+   "metadata": {},
+   "source": [
+    "<div align=\"center\">\n",
+    "\n",
+    "# Escuela Politécnica Nacional  \n",
+    "\n",
+    "</div>\n",
+    "\n",
+    "<div align=\"center\">\n",
+    "\n",
+    "<span style=\"font-size:22px\"><b>Facultad de Ingeniería en Sistemas</b></span>  \n",
+    "\n",
+    "<span style=\"font-size:20px\"><b>Ingeniería en Ciencias de la Computación</b></span>\n",
+    "\n",
+    "</div>   \n",
+    "\n",
+    "**Asignatura:** Métodos Numéricos  \n",
+    "\n",
+    "**Estudiante:** Ismael Freire  \n",
+    "\n",
+    "**Grupo:** GR2  \n",
+    "\n",
+    "**Título del Trabajo:** Título  \n",
+    "\n",
+    "**Fecha de Entrega:** 08/06/2025 "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "68548077",
    "metadata": {},
    "source": [
-    "# Representación numérica\n",
+    "# **Representación numérica**\n",
     "\n",
     "Pasos:\n",
     "\n",
@@ -15,70 +45,71 @@
     "\n",
     "Ej: Escribir el numero (263.3)10 en coma flotante.\n",
     "\n",
-    "**Paso 1: Convertir a binario**\n",
+    "## **Paso 1: Convertir a binario**\n",
     "\n",
-    "263.3 / 2 = 131.5           1\n",
+    "$263.3 / 2 = 131.5           →    1$\n",
     "\n",
-    "131.5 / 2 = 65.75           1\n",
+    "$131.5 / 2 = 65.75           →    1$\n",
     "\n",
-    "65.75 / 2 = 32.875         1\n",
+    "$65.75 / 2 = 32.875         →     1$\n",
     "\n",
-    "32.875 / 2 = 16.4375       0\n",
+    "$32.875 / 2 = 16.4375       →   0$\n",
     "\n",
-    "16.4375 / 2 = 8.21875      0\n",
+    "$16.4375 / 2 = 8.21875      →   0$\n",
     "\n",
-    "8.21875 / 2 = 4.109375     0\n",
+    "$8.21875 / 2 = 4.109375    →    0$\n",
     "\n",
-    "4.109375 / 2 = 2.0546875   0\n",
+    "$4.109375 / 2 = 2.0546875   →  0$\n",
     "\n",
-    "2.0546875 / 2 = 1.02734375  0\n",
+    "$2.0546875 / 2 = 1.02734375  → 0$\n",
     "\n",
-    "1.02734375 / 2 = 0.513671875  1\n",
+    "$1.02734375 / 2 = 0.513671875  → 1$\n",
     "\n",
     "Las divisiones consecutivas se hacen hasta que el cociente sea 0 o la parte entera sea 0. Si el decimal es mayor o igual a 0.5 es 1 y si es menor es 0\n",
     "Se toma desde abajo hacia arriba\n",
     "\n",
-    "263 = 100000111 base 2\n",
+    "$263_{10} = 100000111_2$\n",
     "\n",
     "-> Se realizan multiplicaciones sucecivas hasta que se vea algun patron o alguna forma de que se este repitiendo, se toma solo la parte fraccionaria. Si el resultado es mayor o igual a 1 es 1 y si es menor a 1 es 0.\n",
     "\n",
-    "0.3 * 2 = 0.6 -> 0\n",
+    "$0.3 * 2 = 0.6 -> 0$\n",
     "\n",
-    "0.6 * 2 = 1.2 -> 1\n",
+    "$0.6 * 2 = 1.2 -> 1$\n",
     "\n",
-    "0.2 * 2 = 0.4 -> 0 \n",
+    "$0.2 * 2 = 0.4 -> 0 $\n",
     "\n",
-    "0.4 * 2 = 0.8 -> 0\n",
+    "$0.4 * 2 = 0.8 -> 0$\n",
     "\n",
-    "0.8 * 2 = 1.6 -> 1\n",
+    "$0.8 * 2 = 1.6 -> 1$\n",
     "\n",
-    "0.6 * 2 = 1.2 -> 1\n",
+    "$0.6 * 2 = 1.2 -> 1$\n",
     "\n",
-    "0.2 * 2 = 0.4 -> 0\n",
+    "$0.2 * 2 = 0.4 -> 0$\n",
     "\n",
-    "0.4 * 2 = 0.8 -> 0\n",
+    "$0.4 * 2 = 0.8 -> 0$\n",
     "\n",
-    "0.8 * 2 = 1.6 -> 1\n",
+    "$0.8 * 2 = 1.6 -> 1$\n",
     "\n",
-    "0.6 * 2 = 1.2 -> 1\n",
+    "$0.6 * 2 = 1.2 -> 1$\n",
     "\n",
-    "0.2 * 2 = 0.4 -> 0\n",
+    "$0.2 * 2 = 0.4 -> 0$\n",
     "\n",
-    "Y, se encuentra un patron. Entonces se toma desde abajo hacia arriba\n",
+    "Y, se encuentra un patron. Entonces se toma desde arriba hacia abajo\n",
     "\n",
-    "0.3 = 010011 base 2, y como se repite infinitamente entre 00 y 11 entonces se debe colocar una raya encima para indicar esa repetición\n",
+    "$0.3 = 010011_2$, y como se repite infinitamente entre 00 y 11 entonces se debe colocar una raya encima para indicar esa repetición\n",
     "\n",
-    "**Paso 2. Escribir en notacion cientifica**\n",
+    "## **Paso 2. Escribir en notacion cientifica**\n",
     "\n",
-    "263.3 base 10 = 100000111.010011 base 2\n",
+    "$263.3_{10} = 100000111.010011_2$\n",
     "\n",
-    "263.3 base 10 = 1.00000111010011 x 2^8 base 2    -> se mueve el punto 8 lugares a la izquierda, por lo que se suma 8 al exponente\n",
+    "$263.3_10 = 1.00000111010011 \\cdot  2^8$    -> se mueve el punto 8 lugares a la izquierda, por lo que se suma 8 al exponente\n",
     "\n",
-    "**Paso 3. Seguir el estandar IEEE 754 32 bits**\n",
+    "## **Paso 3. Seguir el estandar IEEE 754 32 bits**\n",
     "\n",
     "*0 si es + y 1 si es -*\n",
     "\n",
-    "*Al exponente que se obtuvo en la notación científica anterior se le debe sumar 127 (Exponente + 127)*\n",
+    "**Al exponente que se obtuvo en la notación científica anterior se le debe sumar 127 (Exponente + 127)**\n",
+    "\n",
     "Ej:\n",
     "\n",
     "8 + 127 = 135\n",
@@ -101,26 +132,39 @@
     "\n",
     "Y, se toma los bits desde abajo hacia arriba, obteniendo 135 base 10 = 10000111 base 2\n",
     "\n",
-    "*Se debe completar la mantisa con ceros hasta llegar a 23 bits*\n",
-    "Ej:\n",
-    "00000111010011 = 00000111010011001100110  -> Si la cadena es periodica infinita, tiene patrones, entonces se completa con los patrones hasta completar los 23 bits. En cambio sino es un numero periodico infinito entonces se completa con ceros hasta llegar a 23 bits.\n",
+    "**Se debe completar la mantisa con ceros hasta llegar a 23 bits**\n",
     "\n",
-    "*Finalmente, se unen los 3 componentes: el signo, el exponente y la mantisa*\n",
+    "Ej:\n",
+    "\n",
+    "00000111010011 = 00000111010011001100110  -> Si la cadena es periodica infinita, tiene patrones, entonces se completa con los patrones hasta completar los 23 bits. En cambio sino es un numero periodico infinito entonces se divide hasta completar los 23 bits.\n",
+    "\n",
+    "**Finalmente, se unen los 3 componentes: el signo, el exponente y la mantisa**\n",
+    "\n",
     "Ej:\n",
     "\n",
     "0 10000111 0000011101001100110011\n",
     "\n",
-    "*Ahora para transformar el valor anterior a decimal se debe usar la siguiente formula*\n",
+    "## **Comprobación:**\n",
     "\n",
-    "x = (-1)^s * 2^(e-127) * (1 + f)\n",
+    "Ahora para transformar el valor anterior a decimal se debe usar la siguiente formula\n",
     "\n",
-    "x = (-1)^s\n",
+    "----\n",
+    "\n",
+    "$x = (-1)^s * 2^{(e-127)} * (1 + f)$\n",
+    "\n",
+    "----\n",
+    "\n",
+    "Donde:\n",
+    "\n",
+    "$x = (-1)^s$\n",
     "\n",
     "  = (-1)^0\n",
     "\n",
     "  = 1\n",
     "\n",
-    "2^(e-127)\n",
+    "------\n",
+    "\n",
+    "$2^{(e-127)}$\n",
     "\n",
     "= 2^(135-127)\n",
     "\n",
@@ -128,36 +172,35 @@
     "\n",
     "  = 256\n",
     "\n",
-    "(1+f) donde f = sumatorio de i=1 a 23 de (f_i * 2^(-i))\n",
+    "------\n",
     "\n",
-    "f = 2^(-6) + 2^(-7) + 2^(-8) + 2^(-10) + 2^(-13) + 2^(-14) + 2^(-17) + 2^(-18) + 2^(-21) + 2^(-22) = 0.02852\n",
+    "$(1+f)$ donde $f =  \\sum_{i = 1}^{23} (f_i \\cdot 2^{-i})$ \n",
     "\n",
-    "(1+0.02852) = 1.02852\n",
+    "$f = 2^{(-6)} + 2^{(-7)} + 2^{(-8)} + 2^{(-10)} + 2^{(-13)} + 2^{(-14)} + 2^{(-17)} + 2^{(-18)} + 2^{(-21)} + 2^{(-22)} = 0.02852$\n",
     "\n",
-    "-> Se obtiene el resultado final de la siguiente manera:\n",
+    "$(1+0.02852) = 1.02852$\n",
     "\n",
-    "x = 1 * 256 * 1.02852 = 263.30112"
+    "------\n",
+    "\n",
+    "Se obtiene el resultado final de la siguiente manera:\n",
+    "\n",
+    "$x = 1 \\cdot 256 \\cdot 1.02852 = 263.30112$\n",
+    "\n",
+    "A continuación se muestra la implementación en código Python de la conversión de un número decimal a binario y su representación en coma flotante según el estándar IEEE 754:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 43,
    "id": "25dcb92e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "100000111.0100110011\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def decimal_binario(numero):\n",
+    "# 1ro Función para convertir un número decimal a binario\n",
+    "def decimal_a_binario(numero, bits):\n",
     "    #Separar la parte entera y parte decimal del numero\n",
     "    parte_entera = int(numero)\n",
-    "    parte_decimal = numero - parte_entera\n",
+    "    parte_fraccionaria = numero - parte_entera\n",
     "\n",
     "    #Convertir la parte entera a binario\n",
     "    binario_entero = \"\"\n",
@@ -165,15 +208,26 @@
     "        binario_entero = str(parte_entera % 2) + binario_entero\n",
     "        parte_entera //= 2\n",
     "\n",
-    "    #Convertir la parte decimal a binario\n",
+    "    #Convertir la parte fraccionaria a binario\n",
     "    binario_decimal = \"\"\n",
-    "    while parte_decimal > 0 and len(binario_decimal) < 10:  # Limitar a 10 dígitos decimales\n",
-    "        parte_decimal *= 2\n",
-    "        if parte_decimal >= 1:\n",
-    "            binario_decimal += \"1\"\n",
-    "            parte_decimal -= 1\n",
-    "        else:\n",
-    "            binario_decimal += \"0\"\n",
+    "    if bits == 32:\n",
+    "        tamanio_decimal = 24 - len(binario_entero)\n",
+    "        while parte_fraccionaria > 0 and len(binario_decimal) <tamanio_decimal:  \n",
+    "            parte_fraccionaria *= 2\n",
+    "            if parte_fraccionaria >= 1:\n",
+    "                binario_decimal += \"1\"\n",
+    "                parte_fraccionaria -= 1\n",
+    "            else:\n",
+    "                binario_decimal += \"0\"\n",
+    "    elif bits == 64:\n",
+    "        tamanio_decimal = 53 - len(binario_entero)\n",
+    "        while parte_fraccionaria > 0 and len(binario_decimal) <tamanio_decimal:  \n",
+    "            parte_fraccionaria *= 2\n",
+    "            if parte_fraccionaria >= 1:\n",
+    "                binario_decimal += \"1\"\n",
+    "                parte_fraccionaria -= 1\n",
+    "            else:\n",
+    "                binario_decimal += \"0\"\n",
     "        \n",
     "    if binario_entero == \"\":\n",
     "        binario_entero = \"0\"\n",
@@ -181,30 +235,17 @@
     "    if binario_decimal:\n",
     "        return f\"{binario_entero}.{binario_decimal}\" \n",
     "    else:\n",
-    "        return binario_entero\n",
-    "\n",
-    "\n",
-    "numero_decimal = 263.3\n",
-    "numero_binario = decimal_binario(numero_decimal)\n",
-    "print(numero_binario)  # Salida: 100000111.0100110011"
+    "        return binario_entero"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "703bea17",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.000001110100110011 x 2^8\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Escribir el numero binario en notacion cientifica\n",
+    "# 2do Función para escribir el numero binario en notacion cientifica\n",
     "def notacion_cientifica (binario):\n",
     "    # Separar la parte entera y la parte fraccionaria\n",
     "    if '.' in binario:\n",
@@ -226,10 +267,7 @@
     "                exponente = -(i + 1)\n",
     "                break\n",
     "        mantisa = '1.' + parte_fraccionaria[i + 1:]\n",
-    "    return f\"{mantisa} x 2^{exponente}\", exponente\n",
-    "\n",
-    "notacion_cientifica_binario, exponente_notacion = notacion_cientifica(numero_binario)\n",
-    "print(notacion_cientifica_binario) "
+    "    return mantisa, exponente"
    ]
   },
   {
@@ -242,27 +280,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "263.3 = 10000111\n"
+      "El número decimal 263.3 a binario es 100000111.010011001100110\n",
+      "El numero en binario 100000111.010011001100110 a su forma en notacion cientifica 1.00000111010011001100110 x 2^8\n",
+      "El numero en formato IEEE 754 es: 0  10000111  00000111010011001100110\n"
      ]
     }
    ],
    "source": [
-    "#Seguir estandar IEEE 754 32 bits\n",
+    "#3ro Función para el Estandar IEEE 754 de 32 bits\n",
+    "\n",
     "def signo(numero):\n",
     "    if numero < 0:\n",
     "        return 1\n",
     "    else:\n",
     "        return 0\n",
     "    \n",
-    "def exponente(numero, exponente):\n",
-    "    exponente += 127\n",
-    "    binario = decimal_binario(exponente)\n",
-    "    return f\"{numero} = {binario}\"\n",
+    "def exponente (exponente, bits):\n",
+    "    binario = \"\"\n",
+    "    if bits == 32:\n",
+    "        exponente += 127\n",
+    "        binario = decimal_a_binario(exponente, 32)\n",
+    "    elif bits == 64:\n",
+    "        exponente += 1023\n",
+    "        binario = decimal_a_binario(exponente, 64)\n",
+    "    return binario\n",
     "\n",
-    "exponente_binario = exponente(numero_decimal, exponente_notacion)\n",
-    "print(exponente_binario)  # Salida: 10000111\n",
-    "\n",
-    "def mantisa(numero):\n",
+    "def mantisa(numero, bits):\n",
     "    # Separar la parte entera y la parte fraccionaria\n",
     "    if '.' in numero:\n",
     "        parte_entera, parte_fraccionaria = numero.split('.')\n",
@@ -272,12 +315,66 @@
     "    # Obtener la mantisa\n",
     "    mantisa = parte_entera + parte_fraccionaria\n",
     "    mantisa = mantisa[1:]  # Eliminar el primer '1'\n",
+    "\n",
+    "    if bits == 32:\n",
+    "        # Completar con ceros hasta 23 bits\n",
+    "        mantisa += '0' * (23 - len(mantisa))\n",
+    "        mantisa = mantisa[:23]\n",
+    "\n",
+    "    elif bits == 64:\n",
+    "            # Completar con ceros hasta 23 bits\n",
+    "        mantisa += '0' * (52 - len(mantisa))\n",
+    "        mantisa = mantisa[:52]\n",
     "    \n",
-    "    # Completar con ceros hasta 23 bits\n",
-    "    mantisa += '0' * (23 - len(mantisa))\n",
+    "    return mantisa\n",
+    "\n",
+    "\n",
+    "def formato_IEEE_754(numero_decimal, exponente_notacion, notacion_cientifica, bits):\n",
+    "    return f\"{signo(numero_decimal)}  {exponente (exponente_notacion, bits)}  {mantisa(notacion_cientifica, bits)}\"\n",
+    "\n",
+    "\n",
+    "# Número decimal a convertir\n",
+    "numero_decimal = 263.3\n",
+    "\n",
+    "# 1ro Conversión a binario\t\n",
+    "numero_binario_32 = decimal_a_binario(numero_decimal, 32)\n",
+    "print(\"El número decimal {} a binario es {}\".format(numero_decimal, numero_binario_32)) \n",
+    "\n",
+    "# 2do Conversión a notación científica\n",
+    "notacion_cientifica_32, exponente_notacion_32 = notacion_cientifica(numero_binario_32)\n",
+    "print(\"El numero en binario {} a su forma en notacion cientifica {} x 2^{}\".format(numero_binario_32, notacion_cientifica_32, exponente_notacion_32)) \n",
+    "\n",
+    "# 3ro Conversión a formato IEEE 754\n",
+    "print(\"El numero en formato IEEE 754 es: {}\".format(formato_IEEE_754(numero_decimal, exponente_notacion_32, notacion_cientifica_32, 32)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "8fdbe295",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El número decimal 263.3 a binario es 100000111.01001100110011001100110011001100110011001101\n",
+      "El numero en binario 100000111.01001100110011001100110011001100110011001101 a su forma en notacion cientifica 1.0000011101001100110011001100110011001100110011001101 x 2^8\n",
+      "El numero en formato IEEE 754 es: 0  10000000111  0000011101001100110011001100110011001100110011001101\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Primero paso el numero decimal a binario\n",
+    "numero_binario_64 = decimal_a_binario(numero_decimal, 64)\n",
+    "print(\"El número decimal {} a binario es {}\".format(numero_decimal, numero_binario_64))\n",
+    "\n",
+    "# 2do Escribir el numero binario en notacion cientifica\n",
+    "notacion_cientifica_64, exponente_notacion_64 = notacion_cientifica(numero_binario_64)\n",
+    "print(\"El numero en binario {} a su forma en notacion cientifica {} x 2^{}\".format(numero_binario_64, notacion_cientifica_64, exponente_notacion_64)) \n",
     "    \n",
-    "    return mantisa[:23]\n",
-    "\n"
+    "# 3ro Seguir Estandar IEEE 754 de 64 bits\n",
+    "print(\"El numero en formato IEEE 754 es: {}\".format(formato_IEEE_754(numero_decimal, exponente_notacion_64, notacion_cientifica_64, 64)))"
    ]
   },
   {
