--- a/Clases/Class4.ipynb
+++ b/Clases/Class4.ipynb
@@ -12,14 +12,44 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e283f74c",
+   "metadata": {},
+   "source": [
+    "<div align=\"center\">\n",
+    "\n",
+    "# Escuela Politécnica Nacional  \n",
+    "\n",
+    "</div>\n",
+    "\n",
+    "<div align=\"center\">\n",
+    "\n",
+    "<span style=\"font-size:22px\"><b>Facultad de Ingeniería en Sistemas</b></span>  \n",
+    "\n",
+    "<span style=\"font-size:20px\"><b>Ingeniería en Ciencias de la Computación</b></span>\n",
+    "\n",
+    "</div>   \n",
+    "\n",
+    "**Asignatura:** Métodos Numéricos  \n",
+    "\n",
+    "**Estudiante:** Ismael Freire  \n",
+    "\n",
+    "**Grupo:** GR2  \n",
+    "\n",
+    "**Título del Trabajo:** Título  \n",
+    "\n",
+    "**Fecha de Entrega:** 08/06/2025 "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "746da193",
    "metadata": {},
    "source": [
-    "# Raíces de una ecación\n",
+    "# **Raíces de una ecación**\n",
     "\n",
     "La raíz x es la solución de una ecuación \n",
     "\n",
-    "## Teorema del valor intermedio\n",
+    "## **Teorema del valor intermedio**\n",
     "\n",
     "Si f es continua en [a,b] y K es cualquier número entre f(a) y f(b), entonces existe un número c en (a,b) tal que f(c)=K.\n",
     "\n",
@@ -35,23 +65,24 @@
     " * se cumple que f(0) < 0 y f(1) > 0, obteniendo 0 < c < 1\n",
     " * por lo tanto existe un número c está en (0,1).\n",
     "\n",
-    "## Búsqueda de cambio de signo\n",
+    "## **Búsqueda de cambio de signo**\n",
     "\n",
     "Un intervalo [a,b], la función f(x) toma valores de diferente signo en los extremos.\n",
     "\n",
     "* Se busca un intervalo [a,b] tal que f(a) y f(b) tengan signos opuestos.\n",
     "\n",
-    "**f(a) * f(b) < 0** \n",
+    "$f(a) * f(b) < 0$ \n",
     "\n",
-    "f(-1) * f(1) < 0\n",
-    "-1 < 0\n",
+    "$f(-1) * f(1) < 0$\n",
     "\n",
-    "## Método de la bisección\n",
+    "$-1 < 0$\n",
+    "\n",
+    "## **Método de la bisección**\n",
     "\n",
     "Realiza divisiones sucesivas infinitas hasta aproximarse a un valor real, el error se va disminuyendo y acercandose a cero. \n",
     "\n",
-    "La búsqueda de cambio de signo nos dice que en ese extremo que se está tomando se está aproximando al valor real.\n",
-    "\n",
+    "La búsqueda de cambio de signo nos dice que en ese extremo que se está tomando se está aproximando al valor real. Si $f(a) \\cdot f(p) < 0$ entonces $b = p$ y $a = a$, en cambio si $f(a) \\cdot f(p) > 0$ entonces $a = p$ y $b = b$.\n",
+    " \n",
     "El número de iteraciones va a dar mayor precisión.\n",
     "\n",
     "Paso 4: se valida si es cero y si lo es se termina el proceso o se realiza el calculo del metodo de la bisección.\n",
@@ -70,7 +101,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Procedimiento completado exitosamente. Solución aproximada p = -1.2509765625\n"
+      "Iteración 1: a = -2, b = 0, p = -1.0, FA = 2.950212931632136, FP = -1.0\n",
+      "Iteración 2: a = -2, b = -1.0, p = -1.5, FA = 2.950212931632136, FP = 0.9634952031398099\n",
+      "Iteración 3: a = -1.5, b = -1.0, p = -1.25, FA = 0.9634952031398099, FP = -0.00728282473092301\n",
+      "Iteración 4: a = -1.5, b = -1.25, p = -1.375, FA = 0.9634952031398099, FP = 0.48022582690363\n",
+      "Iteración 5: a = -1.375, b = -1.25, p = -1.3125, FA = 0.48022582690363, FP = 0.23719521405913302\n",
+      "Iteración 6: a = -1.3125, b = -1.25, p = -1.28125, FA = 0.23719521405913302, FP = 0.11515295433753148\n",
+      "Iteración 7: a = -1.28125, b = -1.25, p = -1.265625, FA = 0.11515295433753148, FP = 0.05398561482037567\n",
+      "Iteración 8: a = -1.265625, b = -1.25, p = -1.2578125, FA = 0.05398561482037567, FP = 0.02336416096493721\n",
+      "Iteración 9: a = -1.2578125, b = -1.25, p = -1.25390625, FA = 0.02336416096493721, FP = 0.008043872959257237\n",
+      "Iteración 10: a = -1.25390625, b = -1.25, p = -1.251953125, FA = 0.008043872959257237, FP = 0.0003813268241048551\n",
+      "Iteración 11: a = -1.251953125, b = -1.25, p = -1.2509765625, FA = 0.0003813268241048551, FP = -0.0034505480992705895\n",
+      "Procedimiento completado exitosamente. \n",
+      " Solución aproximada p = -1.2509765625 en la iteración 11\n"
      ]
     },
     {
@@ -97,7 +140,8 @@
     "        return -1\n",
     "    else:\n",
     "        return 0\n",
-    "    \n",
+    "\n",
+    "# Método de la bisección\n",
     "def biseccion(func, a, b, tolerance, max_iter=1000):\n",
     "    i = 1\n",
     "    FA = func(a)\n",
@@ -106,8 +150,10 @@
     "        p = a + (b - a) / 2\n",
     "        FP = func(p)\n",
     "\n",
+    "        print(f\"Iteración {i}: a = {a}, b = {b}, p = {p}, FA = {FA}, FP = {FP}\")\n",
+    "\n",
     "        if FP == 0 or (b - a) / 2 < tolerance:\n",
-    "            print(\"Procedimiento completado exitosamente. Solución aproximada p =\", p)\n",
+    "            print(\"Procedimiento completado exitosamente. \\n Solución aproximada p =\", p, \"en la iteración\", i)\n",
     "            return p\n",
     "        i += 1\n",
     "\n",
