Correcciones en Class1 y final Class4 y Class5

--- a/Clases/Class1.ipynb
+++ b/Clases/Class1.ipynb
@@ -51,7 +51,7 @@
     "\n",
     "**Grupo:** GR2  \n",
     "\n",
-    "**Título del Trabajo:** Título  \n",
+    "**Título del Trabajo:** U2 Preliminares\n",
     "\n",
     "**Fecha de Entrega:** 08/06/2025 "
    ]
@@ -184,14 +184,12 @@
     "Este error ocurre cuando un número excede el rango máximo que puede ser representado por un tipo de dato específico. Por ejemplo, si se intenta almacenar un número entero muy grande en una variable de tipo byte, se producirá un error de desbordamiento. Este error produce que los desbordamientos se transformen en números negativos o en peor de los casos en NAN, INF, etc.\n",
     "\n",
     "¿Que es un lenguaje fuertemente tipado?\n",
-    "- Es un lenguaje que no permite la conversión automática entre tipos de datos. Por ejemplo, en Python, no se puede sumar un número entero y una cadena de texto sin convertir explícitamente uno de los tipos. Esto ayuda a evitar errores de desbordamiento y otros problemas relacionados con la manipulación de datos.\n",
-    "\n",
-    "->Tarea: Identificar los imites de datos en sus computadores y ver que sucede al desbordar esos limites en python. Todos los deberes deben tener Nombre, Titulo, Grupo, Objetivos, Marco Teorico (opcional), resolución, conclusiones y referencias (opcional). Entregar el jueves en PDF."
+    "- Es un lenguaje que no permite la conversión automática entre tipos de datos. Por ejemplo, en Python, no se puede sumar un número entero y una cadena de texto sin convertir explícitamente uno de los tipos. Esto ayuda a evitar errores de desbordamiento y otros problemas relacionados con la manipulación de datos. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "bfba1bf0",
    "metadata": {},
    "outputs": [
