--- a/Clases/Class2.ipynb
+++ b/Clases/Class2.ipynb
@@ -25,7 +25,7 @@
     "\n",
     "**Grupo:** GR2  \n",
     "\n",
-    "**Título del Trabajo:** Título  \n",
+    "**Título del Trabajo:** U2 Preliminares\n",
     "\n",
     "**Fecha de Entrega:** 08/06/2025 "
    ]
@@ -386,8 +386,37 @@
     "\n",
     "Es la forma en que una computadora realiza operaciones matemátocas usando un número limitado de dígitos.\n",
     "\n",
-    "+- 0,d1 d2 d3d d4 ... dk * 10^n, 1<= d1 <= 9, n entero\n",
-    "\n"
+    "$± 0,d_1 d_2 d_3 d_4 d_5 ... d_k \\cdot 10^n, 1 \\leq  d1 \\leq  9, n \\text{ es entero}$\n",
+    "\n",
+    "### Operaciones\n",
+    "\n",
+    "1. $x ⨁ y = f_1(f(x) + f_1(y))$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8359c37a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def a_notacion_cientifica_decimal(numero):\n",
+    "    if numero == 0:\n",
+    "        return \"0.0 * 10^0\"\n",
+    "    exponente = 0\n",
+    "    valor = abs(numero)\n",
+    "    while valor >= 1:\n",
+    "        valor /= 10\n",
+    "        exponente += 1\n",
+    "    while valor < 0.1:\n",
+    "        valor *= 10\n",
+    "        exponente -= 1\n",
+    "    signo = \"-\" if numero < 0 else \"\"\n",
+    "    return f\"{signo}{valor:.10g} * 10^{exponente}\"\n",
+    "\n",
+    "# Ejemplo de uso\n",
+    "num = 1.22\n",
+    "print(a_notacion_cientifica_decimal(num))"
    ]
   },
   {
