--- a/Clases/Class4.ipynb
+++ b/Clases/Class4.ipynb
@@ -35,7 +35,7 @@
     "\n",
     "**Grupo:** GR2  \n",
     "\n",
-    "**Título del Trabajo:** Título  \n",
+    "**Título del Trabajo:** U3-A Soluciones de sistemas de ecuaciones no lineales  \n",
     "\n",
     "**Fecha de Entrega:** 08/06/2025 "
    ]
