--- a/Clases/Class5.ipynb
+++ b/Clases/Class5.ipynb
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "id": "a78a0ec8",
    "metadata": {},
    "outputs": [
@@ -240,7 +240,7 @@
        "0.739085133215161"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "82ec774a",
    "metadata": {},
    "outputs": [
@@ -355,7 +355,9 @@
       "Iteración 2: xn_2 = 0.7853981633974483, xn_1 = 0.7363841388365822, x_n = 0.7390581392138897, f(xn_2) = -0.0782913822109007, f(xn_1) = 0.0045177185221702\n",
       "Iteración 3: xn_2 = 0.7363841388365822, xn_1 = 0.7390581392138897, x_n = 0.7390851493372764, f(xn_2) = 0.0045177185221702, f(xn_1) = 4.5177215963754236e-05\n",
       "Iteración 4: xn_2 = 0.7390581392138897, xn_1 = 0.7390851493372764, x_n = 0.7390851332150645, f(xn_2) = 4.5177215963754236e-05, f(xn_1) = -2.6982167056210926e-08\n",
-      "El procedimiento fue exitoso. Raíz aproximada: 0.7390851332150645, Iteraciones: 4\n"
+      "El procedimiento fue exitoso. \n",
+      " Raíz aproximada: 0.7390851332150645 \n",
+      " Iteraciones: 4\n"
      ]
     },
     {
@@ -364,7 +366,7 @@
        "0.7390851332150645"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,7 +383,7 @@
     "        print(f\"Iteración {i-1}: xn_2 = {xn_2}, xn_1 = {xn_1}, x_n = {x_n}, f(xn_2) = {f(xn_2)}, f(xn_1) = {f(xn_1)}\")\n",
     "\n",
     "        if abs(x_n - xn_1) < tol:\n",
-    "            print(f\"El procedimiento fue exitoso. Raíz aproximada: {x_n}, Iteraciones: {i-1}\")\n",
+    "            print(f\"El procedimiento fue exitoso. \\n Raíz aproximada: {x_n} \\n Iteraciones: {i-1}\")\n",
     "            return x_n\n",
     "        xn_2, xn_1 = xn_1, x_n\n",
     "        i += 1\n",
