--- a/Clases/Class6.ipynb
+++ b/Clases/Class6.ipynb
@@ -2,17 +2,44 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "67348c0d",
+   "metadata": {},
+   "source": [
+    "<div align=\"center\">\n",
+    "\n",
+    "# Escuela Politécnica Nacional  \n",
+    "\n",
+    "</div>\n",
+    "\n",
+    "<div align=\"center\">\n",
+    "\n",
+    "<span style=\"font-size:22px\"><b>Facultad de Ingeniería en Sistemas</b></span>  \n",
+    "\n",
+    "<span style=\"font-size:20px\"><b>Ingeniería en Ciencias de la Computación</b></span>\n",
+    "\n",
+    "</div>   \n",
+    "\n",
+    "**Asignatura:** Métodos Numéricos  \n",
+    "\n",
+    "**Estudiante:** Ismael Freire  \n",
+    "\n",
+    "**Grupo:** GR2  \n",
+    "\n",
+    "**Título del Trabajo:** U3-B Soluciones de sistemas de ecuaciones no lineales \n",
+    "\n",
+    "**Fecha de Entrega:** 08/06/2025 "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ae5736cf",
    "metadata": {},
    "source": [
-    "# Clase 06/05\n",
-    "-> Prueba primer parcial: 13/05\n",
-    "\n",
     "# Método de la aproximación falsa\n",
     "\n",
     "Maneja las mismas condiciones que el metodo de la secante pero agrega una condición adicional que permite que se llegue a la solucion. \n",
     "\n",
-    "Metodos cerrados: Obligan que la solucion se encuentre en el intervalo [a,b]. Son los metodos de la bisección y el de la aproximación falsa.\n",
+    "**Metodos cerrados:** Obligan que la solucion se encuentre en el intervalo $[a,b]$. Son los metodos de la bisección y el de la aproximación falsa.\n",
     "\n",
     "La diferencia entre el metodo de la secante y el de la aproximacion falsa es que tienen un punto en comun. Pero este punto no siempre es el mismo.\n"
    ]
@@ -35,11 +62,11 @@
    "id": "9245a9f9",
    "metadata": {},
    "source": [
-    "El hecho de tomar puntos que tienen signos diferentes \n",
+    "Se basa en el hecho de tomar puntos que tienen signos diferentes \n",
     "\n",
     "**¿Es mejor el metodo de la aproximación falsa que el de la secante?**\n",
-    "En terminos de velocidad convergencia, el metodo de la secante va a converger mas rapido. Ya que el metodo de la aproximacion falsa va a ser un poco mas lento. \n",
-    "El metodo de la aproximacion falsa es mas seguro, porque siempre converge. \n"
+    "\n",
+    "En terminos de velocidad de convergencia, el metodo de la secante va a converger mas rapido. Ya que el metodo de la aproximacion falsa va a ser un poco mas lento. Pero el método de la aproximacion falsa es más seguro, porque siempre converge. \n"
    ]
   },
   {
@@ -47,20 +74,92 @@
    "id": "554c2636",
    "metadata": {},
    "source": [
-    "Sea f(x) = cos(x) - x = 0\n",
+    "Sea $f(x) = cos(x) - x = 0$\n",
     "\n",
-    "Donde p0 = 0.5 y p1 = pi/4\n",
+    "Donde $p0 = 0.5$ y $p1 = pi/4$ y se tiene una tolerancia de $10^{-6}$\n",
     "\n",
-    "n       xn          f(xn)\n",
-    "0       0.5        \n",
-    "1       pi/4\n",
-    "2       "
+    "A continuación se muestra el código para la implementación del método de la aproximación falsa. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "04c7d970",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteración 1: xn_2 = 0.5, xn_1 = 0.7853981633974483, x_n = 0.7363841388365822, f(xn_2) = 0.37758256189037276, f(x_n) = 0.0045177185221702\n",
+      "Iteración 2: xn_2 = 0.7853981633974483, xn_1 = 0.7363841388365822, x_n = 0.7390581392138897, f(xn_2) = -0.0782913822109007, f(x_n) = 4.5177215963754236e-05\n",
+      "Iteración 3: xn_2 = 0.7853981633974483, xn_1 = 0.7390581392138897, x_n = 0.7390848638147098, f(xn_2) = -0.0782913822109007, f(x_n) = 4.5087180833291995e-07\n",
+      "Iteración 4: xn_2 = 0.7853981633974483, xn_1 = 0.7390848638147098, x_n = 0.7390851305265789, f(xn_2) = -0.0782913822109007, f(x_n) = 4.499642769495438e-09\n",
+      "El procedimiento fue exitoso. \n",
+      " Raíz aproximada: 0.7390851305265789 \n",
+      " Iteraciones: 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "def f(x):\n",
+    "    return math.cos(x) - x  # Cambia la función según tu problema\n",
+    "\n",
+    "def posicion_falsa(xn_2, xn_1, tol, iter):\n",
+    "    i = 2\n",
+    "    f_xn_2 = f(xn_2)\n",
+    "    f_xn_1 = f(xn_1)\n",
+    "    while i <= iter:\n",
+    "        if f_xn_1 - f_xn_2 == 0:\n",
+    "            print(\"División por cero detectada. El método falla.\")\n",
+    "            return None\n",
+    "        \n",
+    "        x_n = xn_1 - f_xn_1 * (xn_1 - xn_2) / (f_xn_1 - f_xn_2)\n",
+    "\n",
+    "        print(f\"Iteración {i-1}: xn_2 = {xn_2}, xn_1 = {xn_1}, x_n = {x_n}, f(xn_2) = {f(xn_2)}, f(x_n) = {f(x_n)}\")\n",
+    "\n",
+    "        if abs(x_n - xn_1) < tol:\n",
+    "            print(f\"El procedimiento fue exitoso. \\n Raíz aproximada: {x_n} \\n Iteraciones: {i-1}\")\n",
+    "            return\n",
+    "        i += 1\n",
+    "        q = f(x_n)\n",
+    "        if q * f_xn_1 < 0:\n",
+    "            xn_2 = xn_1\n",
+    "            f_xn_2 = f_xn_1\n",
+    "        xn_1 = x_n\n",
+    "        f_xn_1 = q\n",
+    "    print(f\"El método falló después de {iter} iteraciones.\")\n",
+    "    return None\n",
+    "\n",
+    "# Ejemplo de uso con la función coseno analizada anteriormente en los métodos de Newton y bisección:\n",
+    "xn_2 = 0.5      # Primer valor inicial\n",
+    "xn_1 = math.pi/4    # Segundo valor inicial\n",
+    "tol = 1e-6    # Tolerancia\n",
+    "iter = 100      # Número máximo de iteraciones\n",
+    "\n",
+    "posicion_falsa(xn_2, xn_1, tol, iter)"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
