--- a/Clases/Class5.ipynb
+++ b/Clases/Class5.ipynb
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "a78a0ec8",
    "metadata": {},
    "outputs": [
@@ -233,16 +233,6 @@
       " Raíz aproximada: 0.739085133215161 \n",
       " Iteraciones: 3\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.739085133215161"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -266,7 +256,7 @@
     "\n",
     "        if abs(x_n - xn_1) < tol:\n",
     "            print(f\"El procedimiento fue exitoso. \\n Raíz aproximada: {x_n} \\n Iteraciones: {i}\")\n",
-    "            return x_n\n",
+    "            return # x_n\n",
     "        i += 1\n",
     "        xn_1 = x_n\n",
     "    print(f\"El método falló después de {iter} iteraciones.\")\n",
@@ -343,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "82ec774a",
    "metadata": {},
    "outputs": [
@@ -359,16 +349,6 @@
       " Raíz aproximada: 0.7390851332150645 \n",
       " Iteraciones: 4\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.7390851332150645"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -384,7 +364,7 @@
     "\n",
     "        if abs(x_n - xn_1) < tol:\n",
     "            print(f\"El procedimiento fue exitoso. \\n Raíz aproximada: {x_n} \\n Iteraciones: {i-1}\")\n",
-    "            return x_n\n",
+    "            return # x_n\n",
     "        xn_2, xn_1 = xn_1, x_n\n",
     "        i += 1\n",
     "    print(f\"El método falló después de {iter} iteraciones.\")\n",
